--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ video::-webkit-media-controls-time-remaining-display {
   color: white;
 }
 
-@media (min-width: 360px) and (max-width: 377px) {
+@media (max-width: 400px) {
   .parte-de-cima {
     top: 22%;
   }
@@ -227,7 +227,7 @@ video::-webkit-media-controls-time-remaining-display {
   }
 }
 
-@media (min-width: 390px) and (max-width: 1024px) {
+@media (min-width: 401px) and (max-width: 1024px) {
   .parte-de-cima {
     top: 22%;
   }
